--- a/SimpleWeather.Android/Resources/layout/app_widget_4x1.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_4x1.xml
@@ -4,7 +4,7 @@
     android:id="@+id/widgetBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@color/color_background_day"
     android:orientation="vertical"
     android:padding="@dimen/widget_margin"
     tools:layout_height="72dp"
