--- a/SimpleWeather.Android/Resources/layout/app_widget_2x2.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_2x2.xml
@@ -4,7 +4,7 @@
     android:id="@+id/widgetBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@color/color_background_day"
     android:orientation="vertical"
     android:padding="@dimen/widget_margin"
     tools:layout_height="144dp"
@@ -228,11 +228,11 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:padding="2dp"
-                android:text="--%"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                 android:textColor="@android:color/white"
                 android:textSize="10sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="50%" />
 
         </LinearLayout>
 
