--- a/SimpleWeather.Android/Resources/layout/fragment_locations.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_locations.xml
@@ -61,7 +61,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/favorite_label"
-                android:orientation="vertical" />
+                android:orientation="vertical"
+                tools:listitem="@layout/location_panel" />
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 
