--- a/SimpleWeather.Android/Resources/layout/weather_hrforecast_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/weather_hrforecast_panel.xml
@@ -1,136 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/forecast_panel_width"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="4dp">
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/hrforecast_date"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
         android:textColor="@android:color/white"
         android:textSize="@dimen/forecast_date_size"
+        app:layout_constraintBottom_toTopOf="@+id/hrforecast_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:text="Someday XX" />
 
-    <LinearLayout
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/hrforecast_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:gravity="center_vertical"
+        android:padding="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+        app:autoSizeMaxTextSize="@dimen/forecast_icon_size"
+        app:autoSizeMinTextSize="6sp"
+        app:autoSizeTextType="uniform"
+        app:fontFamily="@font/weathericons"
+        app:layout_constraintBottom_toTopOf="@+id/hrforecast_condition"
+        app:layout_constraintEnd_toStartOf="@+id/hrforecast_temphi"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hrforecast_date"
+        tools:fontFamily="@font/weathericons"
+        tools:text="@string/wi_day_sprinkle" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/hrforecast_icon"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:padding="4dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
-            app:fontFamily="@font/weathericons"
-            tools:fontFamily="@font/weathericons"
-            tools:text="@string/wi_wu_sunny" />
-
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/hrforecast_temphi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:padding="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            tools:text="77º" />
-
-    </LinearLayout>
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/hrforecast_temphi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:padding="8dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/hrforecast_condition"
+        app:layout_constraintStart_toEndOf="@+id/hrforecast_icon"
+        app:layout_constraintTop_toBottomOf="@+id/hrforecast_date"
+        tools:text="77º" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/hrforecast_condition"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:gravity="center_vertical"
+        android:maxLines="1"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
         android:textColor="@android:color/white"
         android:textSize="@dimen/forecast_condition_size"
         app:autoSizeMaxTextSize="@dimen/forecast_condition_size"
-        app:autoSizeMinTextSize="2sp"
+        app:autoSizeMinTextSize="6sp"
+        app:autoSizeStepGranularity="2sp"
         app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/hrforecast_pop_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hrforecast_icon"
         tools:text="Scattered Thunderstorms" />
 
-    <LinearLayout
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/hrforecast_pop_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:gravity="center_vertical"
+        android:paddingEnd="4dp"
+        android:paddingStart="4dp"
+        android:text="@string/wi_raindrop"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+        android:textColor="@android:color/white"
+        app:fontFamily="@font/weathericons"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/hrforecast_pop"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hrforecast_condition"
+        app:layout_constraintVertical_bias="0.0"
+        tools:fontFamily="@font/weathericons" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/hrforecast_pop_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingEnd="4dp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:paddingStart="4dp"
-            android:text="@string/wi_raindrop"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
-            android:textColor="@android:color/white"
-            app:fontFamily="@font/weathericons"
-            tools:fontFamily="@font/weathericons" />
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/hrforecast_pop"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:padding="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/forecast_condition_size"
+        app:autoSizeMaxTextSize="@dimen/forecast_condition_size"
+        app:autoSizeMinTextSize="6sp"
+        app:autoSizeStepGranularity="2sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/hrforecast_wind_dir"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@+id/hrforecast_pop_icon"
+        app:layout_constraintTop_toBottomOf="@+id/hrforecast_condition"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="100%" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/hrforecast_pop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:padding="4dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/forecast_condition_size"
-            app:autoSizeMaxTextSize="@dimen/forecast_condition_size"
-            app:autoSizeMinTextSize="2sp"
-            app:autoSizeTextType="uniform"
-            tools:text="100%" />
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/hrforecast_wind_dir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:paddingEnd="4dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:paddingStart="4dp"
+        android:text="@string/wi_wind_direction"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:fontFamily="@font/weathericons"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/hrforecast_wind"
+        app:layout_constraintStart_toEndOf="@+id/hrforecast_pop"
+        app:layout_constraintTop_toBottomOf="@+id/hrforecast_condition"
+        app:layout_constraintVertical_bias="0.0"
+        tools:fontFamily="@font/weathericons" />
 
-        <Space
-            android:layout_width="5dp"
-            android:layout_height="wrap_content" />
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/hrforecast_wind"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:padding="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/forecast_condition_size"
+        app:autoSizeMaxTextSize="@dimen/forecast_condition_size"
+        app:autoSizeMinTextSize="6sp"
+        app:autoSizeStepGranularity="2sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1.5"
+        app:layout_constraintStart_toEndOf="@+id/hrforecast_wind_dir"
+        app:layout_constraintTop_toBottomOf="@+id/hrforecast_condition"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="100 mph" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/hrforecast_wind_dir"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingEnd="4dp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:paddingStart="4dp"
-            android:text="@string/wi_wind_direction"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            app:fontFamily="@font/weathericons"
-            tools:fontFamily="@font/weathericons" />
-
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/hrforecast_wind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:padding="4dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/forecast_condition_size"
-            app:autoSizeMaxTextSize="@dimen/forecast_condition_size"
-            app:autoSizeMinTextSize="2sp"
-            app:autoSizeTextType="uniform"
-            tools:text="100 mph" />
-    </LinearLayout>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
