--- a/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
@@ -148,42 +148,38 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/dark_round_corner_bg">
 
-                    <LinearLayout
-                        android:id="@+id/forecast_header"
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/forecast_label"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
-                        android:orientation="horizontal"
-                        android:padding="8dp">
+                        android:layout_toLeftOf="@+id/forecast_switch"
+                        android:padding="12dp"
+                        android:text="@string/label_forecast"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/forecast_label"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:padding="4dp"
-                            android:text="@string/label_forecast"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <Switch
-                            android:id="@+id/forecast_switch"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:checked="false"
-                            android:switchPadding="10dp"
-                            android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
-                            android:text="@string/switch_daily"
-                            android:textColor="@android:color/white" />
-
-                    </LinearLayout>
+                    <Switch
+                        android:id="@+id/forecast_switch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/forecast_border"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:checked="false"
+                        android:padding="8dp"
+                        android:switchPadding="10dp"
+                        android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
+                        android:text="@string/switch_daily"
+                        android:textColor="@android:color/white" />
 
                     <View
                         android:id="@+id/forecast_border"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:layout_below="@+id/forecast_header"
+                        android:layout_below="@+id/forecast_label"
                         android:background="@android:color/white" />
 
                     <android.support.v7.widget.RecyclerView
