--- a/SimpleWeather.Android/Resources/layout/activity_setup.xml
+++ b/SimpleWeather.Android/Resources/layout/activity_setup.xml
@@ -37,11 +37,13 @@
                 android:id="@+id/gps_follow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:drawableEnd="@drawable/ic_my_location_white_24dp"
-                android:drawablePadding="4dp"
-                android:drawableRight="@drawable/ic_my_location_white_24dp"
-                android:padding="16dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/cardview_dark_background"
+                android:drawableLeft="@drawable/ic_my_location_white_24dp"
+                android:drawablePadding="8dp"
+                android:drawableStart="@drawable/ic_my_location_white_24dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="16dp"
                 android:text="@string/label_gpsfollow"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
@@ -58,76 +60,76 @@
                 android:paddingBottom="8dp"
                 android:paddingTop="8dp"
                 android:visibility="gone"
-                tools:visibility="visible" />
+                tools:visibility="gone" />
 
-            <LinearLayout
-                android:id="@+id/api_region"
+            <View
+                android:id="@+id/search_divider"
                 android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:background="@color/colorPrimary" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/provider_label"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/searchview_side_margins"
-                android:layout_marginLeft="@dimen/searchview_side_margins"
-                android:layout_marginRight="@dimen/searchview_side_margins"
-                android:layout_marginTop="@dimen/searchview_side_margins"
-                android:orientation="vertical">
+                android:maxLines="1"
+                android:padding="8dp"
+                android:text="@string/api_label"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="12sp" />
 
-                <View
-                    android:id="@+id/search_divider"
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/searchview_height_region_search"
+                app:cardBackgroundColor="@color/cardview_light_background">
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/api_spinner"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:background="@color/colorPrimary" />
+                    android:layout_height="match_parent"
+                    android:paddingBottom="12dp"
+                    android:paddingTop="12dp"
+                    app:backgroundTint="@android:color/darker_gray"
+                    tools:entries="@array/refreshinterval_entries" />
+            </android.support.v7.widget.CardView>
 
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:paddingBottom="8dp"
+            <View
+                android:id="@+id/key_divider"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/colorPrimary" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/key_entry_box"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/searchview_height_region_search"
+                app:cardBackgroundColor="@color/cardview_light_background">
+
+                <EditText
+                    android:id="@+id/key_entry"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:hint="@string/key_hint"
+                    android:paddingBottom="12dp"
                     android:paddingLeft="8dp"
                     android:paddingStart="8dp"
-                    android:text="@string/api_label"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/white"
-                    android:textSize="12sp" />
+                    android:paddingTop="12dp"
+                    android:textSize="16sp"
+                    android:inputType="textVisiblePassword" />
+            </android.support.v7.widget.CardView>
 
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/cardview_light_background">
-
-                    <android.support.v7.widget.AppCompatSpinner
-                        android:id="@+id/api_spinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="12dp"
-                        android:paddingTop="12dp"
-                        app:backgroundTint="@android:color/darker_gray" />
-                </android.support.v7.widget.CardView>
-
-                <View
-                    android:id="@+id/key_divider"
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/colorPrimary" />
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/key_entry_box"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/cardview_light_background">
-
-                    <EditText
-                        android:id="@+id/key_entry"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@null"
-                        android:hint="@string/key_hint"
-                        android:paddingBottom="12dp"
-                        android:paddingLeft="8dp"
-                        android:paddingStart="8dp"
-                        android:paddingTop="12dp"
-                        android:textSize="16sp" />
-                </android.support.v7.widget.CardView>
-            </LinearLayout>
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/register_button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="8dp"
+                android:text="@string/label_apiregister"
+                android:textColor="@android:color/white"
+                android:textSize="12sp" />
         </LinearLayout>
     </ScrollView>
 
