--- a/SimpleWeather.Android/Resources/layout/weather_hrforecast_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/weather_hrforecast_panel.xml
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:maxLines="1"
+        android:lines="2"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
         android:textColor="@android:color/white"
@@ -72,7 +72,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hrforecast_icon"
-        tools:text="Scattered Thunderstorms" />
+        tools:text="Sprinkles early. Mostly cloudy. Mild" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/hrforecast_pop_icon"
