--- a/SimpleWeather.UWP/Controls/TextForecastItem.xaml
+++ b/SimpleWeather.UWP/Controls/TextForecastItem.xaml
@@ -24,7 +24,7 @@
                      Margin="5" HorizontalAlignment="Left">
                 <TextBlock Text="{x:Bind ViewModel.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" Style="{StaticResource WeatherIcon}"/>
             </Viewbox>
-            <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1">
                 <TextBlock Text="&#xf078;" Style="{StaticResource WeatherIcon}"
                            FontSize="18" Padding="5,0"/>
                 <TextBlock Text="{x:Bind ViewModel.PoP, FallbackValue='100%', Mode=OneWay}"
