--- a/SimpleWeather.UWP/SettingsPage.xaml
+++ b/SimpleWeather.UWP/SettingsPage.xaml
@@ -238,11 +238,11 @@
                             </StackPanel>
                             <ComboBox x:Name="RefreshComboBox" MinWidth="260" Margin="0,10">
                                 <ComboBox.Items>
-                                    <TextBlock x:Uid="Pref_Refresh15Min" Text="15 minutes"/>
-                                    <TextBlock x:Uid="Pref_Refresh30Min" Text="30 minutes (default)"/>
                                     <TextBlock x:Uid="Pref_Refresh60Min" Text="1 hour"/>
+                                    <TextBlock x:Uid="Pref_Refresh2Hrs" Text="2 hours"/>
                                     <TextBlock x:Uid="Pref_Refresh3Hrs" Text="3 hours"/>
                                     <TextBlock x:Uid="Pref_Refresh6Hrs" Text="6 hours"/>
+                                    <TextBlock x:Uid="Pref_Refresh12Hrs" Text="12 hours"/>
                                 </ComboBox.Items>
                                 <ComboBox.Header>
                                     <TextBlock x:Uid="Pref_RefreshInterval" Text="Update Frequency" />
